--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
-  "multer": "^1.4.4",
+    "multer": "^1.4.4",
     "uuid": "^9.0.0"
   }
 }
